--- a/css/main.css
+++ b/css/main.css
@@ -48,11 +48,10 @@
 
 form {
   width: 650px;
-  margin-bottom: 370px; }
+  margin-bottom: 120px; }
 
 input {
   height: 60px;
-  border: 0;
   font-size: 14px;
   letter-spacing: 3px;
   color: #999999;
@@ -68,6 +67,7 @@ input {
   text-align: center; }
 
 .submit {
+  padding-bottom: 2px;
   width: 150px;
   height: 60px;
   border: 2px solid #ffffff;
@@ -90,6 +90,15 @@ input::placeholder {
 button span {
   font-size: 16px;
   padding-left: 10px; }
+
+.scroll {
+  font-size: 14px;
+  letter-spacing: 3px;
+  line-height: 26px;
+  color: #ffffff;
+  font-family: "Josefin Sans";
+  text-align: center;
+  margin-bottom: 210px; }
 
 .container {
   max-width: 1111px;
