--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,7 @@
 *:focus {
     outline: none !important;}
 
-.text--header {
+.travel__header {
     max-width: 1800px;
     width: 100%;
     height: 100vh;
@@ -110,11 +110,16 @@ text-align: center;
       }
 
 .container {
-   
+   position: relative;
+   z-index: 3;
     max-width: 1111px;
-    margin: 0px auto;}
+    margin: 0px auto;
+    
+   
+}
    
    .nav--footer {
+   
        display: flex;
        justify-content: space-between;
        align-items: center;
@@ -123,7 +128,7 @@ text-align: center;
 }
 .header--nav{
     position: absolute;
-    
+   
     width: 100%;
     max-width: 1800px;
     
