--- a/css/main.css
+++ b/css/main.css
@@ -299,3 +299,104 @@ button span {
         align-self: start; }
       .travel__why .container .why__right .image2 {
         align-self: flex-end; }
+
+.travel__what {
+  max-width: 1800px;
+  width: 100%;
+  height: 100vh;
+  max-height: 340px;
+  background-color: #333333;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .travel__what .container {
+    width: 100%;
+    max-width: 1111px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative; }
+    .travel__what .container .what--left {
+      width: 300px;
+      height: 150px;
+      font-size: 36px;
+      color: #e8e8e8;
+      font-weight: 400;
+      font-family: "Aleo";
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      flex-wrap: wrap; }
+      .travel__what .container .what--left div {
+        width: 100px;
+        height: 70px;
+        background-color: #333333;
+        font-size: 60px;
+        color: #4877FD; }
+      .travel__what .container .what--left div:hover {
+        color: #FF6363;
+        cursor: pointer;
+        transition: 0.05s; }
+    .travel__what .container .what--center {
+      width: 300px;
+      height: 150px;
+      font-size: 36px;
+      color: #e8e8e8;
+      font-weight: 400;
+      font-family: "Aleo";
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      flex-wrap: wrap; }
+      .travel__what .container .what--center div {
+        width: 100px;
+        height: 50px;
+        background-color: #333333;
+        font-size: 60px;
+        color: #4877FD; }
+      .travel__what .container .what--center div:hover {
+        color: #FF6363;
+        cursor: pointer;
+        transition: 0.05s; }
+    .travel__what .container .what--right {
+      width: 300px;
+      height: 140px;
+      font-size: 36px;
+      color: #e8e8e8;
+      font-weight: 400;
+      font-family: "Aleo";
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      flex-wrap: wrap; }
+      .travel__what .container .what--right div {
+        width: 100px;
+        height: 50px;
+        background-color: #333333;
+        font-size: 60px;
+        color: #4877FD; }
+      .travel__what .container .what--right div:hover {
+        color: #FF6363;
+        cursor: pointer;
+        transition: 0.05s; }
+    .travel__what .container .shape1 {
+      position: absolute;
+      width: 38%;
+      height: 240px;
+      border-top: 2px dotted #ffffff;
+      border-radius: 50%;
+      z-index: -1;
+      left: 12%; }
+    .travel__what .container .shape2 {
+      position: absolute;
+      width: 38%;
+      height: 240px;
+      border-top: 2px dotted #ffffff;
+      border-radius: 50%;
+      z-index: -1;
+      left: 50%; }
