--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ button span {
         font-size: 16px;
         letter-spacing: 2px;
         line-height: 25px;
-        font-weight: 200;
+        font-weight: 300;
         color: #e8e8e8;
         font-family: "Josefin Sans"; }
         .travel__why .container .why__left .left--text1 .left--text2 {
@@ -271,7 +271,7 @@ button span {
           font-size: 16px;
           letter-spacing: 2px;
           line-height: 25px;
-          font-weight: 200;
+          font-weight: 300;
           color: #e8e8e8;
           font-family: 'Josefin Sans', sans-serif; }
       .travel__why .container .why__left .why__button {
@@ -400,3 +400,70 @@ button span {
       border-radius: 50%;
       z-index: -1;
       left: 50%; }
+
+.travel__with1 {
+  max-width: 1800px;
+  width: 100%;
+  height: 100vh;
+  max-height: 700px;
+  background-image: url(../img/with1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end; }
+  .travel__with1 .container {
+    width: 100%;
+    max-width: 1111px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .travel__with1 .container .with--main {
+      width: 49%;
+      height: 370px;
+      background-color: #232323;
+      margin-bottom: 100px;
+      opacity: 0.9;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      padding-left: 30px; }
+      .travel__with1 .container .with--main .main--country {
+        width: 100%;
+        font-size: 20px;
+        letter-spacing: 2px;
+        font-weight: 200;
+        color: #e8e8e8;
+        font-family: "Josefin Sans";
+        margin-top: 40px; }
+      .travel__with1 .container .with--main .main--head {
+        width: 100%;
+        font-size: 20px;
+        font-weight: 200;
+        color: #ffffff;
+        font-family: 'Josefin Sans', sans-serif;
+        text-transform: uppercase; }
+      .travel__with1 .container .with--main .main--text {
+        width: 80%;
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 200;
+        color: #e8e8e8;
+        font-family: 'Josefin Sans', sans-serif; }
+      .travel__with1 .container .with--main .with__button {
+        background-color: #5474FD;
+        width: 225px;
+        height: 60px;
+        margin-bottom: 40px;
+        margin-top: 40px;
+        font-size: 16px;
+        letter-spacing: 1px;
+        color: #ffffff;
+        font-weight: 400;
+        font-family: "Aleo";
+        text-align: center;
+        cursor: pointer;
+        text-transform: uppercase; }
