--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,9 @@ button span {
   font-weight: 400;
   font-family: "Aleo"; }
 
+.header__link:hover {
+  color: #FF6363; }
+
 @media (max-width: 767px) {
   body.lock {
     overflow: hidden; }
@@ -412,15 +415,14 @@ button span {
   background-size: cover;
   margin: auto;
   display: flex;
-  justify-content: center;
-  align-items: flex-end; }
+  justify-content: center; }
   .travel__with1 .container {
     width: 100%;
     max-width: 1111px;
     margin: 0px auto;
     display: flex;
-    justify-content: space-between;
-    align-items: center; }
+    justify-content: flex-start;
+    align-items: flex-end; }
     .travel__with1 .container .with--main {
       width: 49%;
       height: 370px;
@@ -447,7 +449,7 @@ button span {
         font-family: 'Josefin Sans', sans-serif;
         text-transform: uppercase; }
       .travel__with1 .container .with--main .main--text {
-        width: 80%;
+        width: 75%;
         font-size: 16px;
         line-height: 20px;
         font-weight: 200;
@@ -467,3 +469,129 @@ button span {
         text-align: center;
         cursor: pointer;
         text-transform: uppercase; }
+
+.travel__with2 {
+  max-width: 1800px;
+  width: 100%;
+  height: 100vh;
+  max-height: 700px;
+  background-image: url(../img/with2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end; }
+  .travel__with2 .container {
+    width: 100%;
+    max-width: 1111px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end; }
+    .travel__with2 .container .with--main {
+      width: 49%;
+      height: 370px;
+      background-color: #232323;
+      margin-bottom: 100px;
+      opacity: 0.9;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      padding-left: 30px; }
+      .travel__with2 .container .with--main .main--country {
+        width: 100%;
+        font-size: 20px;
+        letter-spacing: 2px;
+        font-weight: 200;
+        color: #e8e8e8;
+        font-family: "Josefin Sans";
+        margin-top: 40px; }
+      .travel__with2 .container .with--main .main--head {
+        width: 100%;
+        font-size: 20px;
+        font-weight: 200;
+        color: #ffffff;
+        font-family: 'Josefin Sans', sans-serif;
+        text-transform: uppercase; }
+      .travel__with2 .container .with--main .main--text {
+        width: 75%;
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 200;
+        color: #e8e8e8;
+        font-family: 'Josefin Sans', sans-serif; }
+      .travel__with2 .container .with--main .with__button {
+        background-color: #5474FD;
+        width: 225px;
+        height: 60px;
+        margin-bottom: 40px;
+        margin-top: 40px;
+        font-size: 16px;
+        letter-spacing: 1px;
+        color: #ffffff;
+        font-weight: 400;
+        font-family: "Aleo";
+        text-align: center;
+        cursor: pointer;
+        text-transform: uppercase; }
+
+.travel__say {
+  max-width: 1800px;
+  width: 100%;
+  height: 100vh;
+  max-height: 730px;
+  background-image: url(../img/Say1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .travel__say .container {
+    width: 100%;
+    height: 100%;
+    max-width: 1111px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start; }
+    .travel__say .container .say--head {
+      font-size: 36px;
+      color: #ffffff;
+      font-weight: 400;
+      font-family: "Aleo";
+      text-align: center;
+      margin-top: 120px; }
+    .travel__say .container .say--main {
+      width: 100%;
+      height: 39%;
+      background-color: #333333;
+      overflow: hidden;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .travel__say .container .say--main .main--text {
+        width: 50%;
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 200;
+        color: #e8e8e8;
+        font-family: 'Josefin Sans', sans-serif;
+        padding-right: 50px; }
+        .travel__say .container .say--main .main--text div {
+          font-size: 16px;
+          line-height: 26px;
+          color: #fefefe;
+          font-family: "Josefin Sans";
+          margin-bottom: 35px;
+          text-transform: uppercase; }
+        .travel__say .container .say--main .main--text span {
+          font-size: 60px;
+          color: #5474fd;
+          font-weight: 200;
+          font-family: 'Aleo"', sans-serif;
+          padding-right: 5px;
+          float: left; }
