--- a/css/main.css
+++ b/css/main.css
@@ -595,3 +595,67 @@ button span {
           font-family: 'Aleo"', sans-serif;
           padding-right: 5px;
           float: left; }
+
+.travel__footer {
+  max-width: 1800px;
+  width: 100%;
+  height: 100vh;
+  max-height: 270px;
+  background-color: #232323;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .travel__footer .container {
+    width: 100%;
+    height: 100%;
+    max-width: 1111px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; }
+    .travel__footer .container .footer--main {
+      width: 20%;
+      margin-top: 120px;
+      color: #e8e8e8;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      justify-content: center; }
+      .travel__footer .container .footer--main .logo {
+        font-size: 24px;
+        letter-spacing: 3px;
+        line-height: 26px;
+        color: #ffffff;
+        font-weight: 700;
+        font-family: "Josefin Sans";
+        text-transform: uppercase; }
+      .travel__footer .container .footer--main .text {
+        font-size: 16px;
+        letter-spacing: 2px;
+        line-height: 26px;
+        color: #ffffff;
+        font-weight: 200;
+        font-family: "Josefin Sans";
+        text-align: center;
+        margin-top: 15px; }
+      .travel__footer .container .footer--main .icons {
+        width: 150px;
+        height: 30px;
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        align-self: center; }
+        .travel__footer .container .footer--main .icons div {
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+        .travel__footer .container .footer--main .icons i {
+          padding: 5px;
+          font-size: 15px;
+          width: 20px;
+          height: 20px;
+          text-align: center;
+          text-decoration: none;
+          color: #ffffff; }
