--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,9 @@ button span {
   font-size: 16px;
   padding-left: 10px; }
 
+a {
+  text-decoration: none; }
+
 .scroll {
   font-size: 14px;
   letter-spacing: 3px;
