--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -99,6 +99,9 @@ text-align: center;
         padding-left: 10px;
         
       }
+      a {
+        text-decoration: none;
+      }
       .scroll{
         font-size: 14px;
         letter-spacing: 3px;
